--- a/audio.html
+++ b/audio.html
@@ -1,3 +1,8 @@
+<html>
+  <head>
+    <title>Mute and Unmute Audio</title>
+  </head>
+  <body>
     <audio id="audio" src="ambient.mp3" muted></audio>
     <button id="mute-button">Unmute</button>
     <script>
